<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorites_black"
        android:title="@string/title_favorites" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black"
        android:title="@string/title_search" />


    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_maps_black"
        android:title="@string/title_maps" />
    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu_black"
        android:title="@string/title_menu" />
</menu>